# ROS1-Joint-Trajectory-Handler

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: joint_trajectory_handler.yaml
launch/: player.launch  recorder.launch
src/joint_trajectory_handler/: player.py  recorder.py
