<?xml version="1.0"?>
<package format="2">
  <name>joint_trajectory_handler</name>
  <version>0.0.0</version>
  <description>The joint_trajectory_handler package</description>

  <maintainer email="matthias.mayr@cs.lth.se">Matthias Mayr</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/joint_trajectory_handler</url> -->

  <author email="matthias.mayr@cs.lth.se">Matthias Mayr</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!--   <test_depend>gtest</test_depend> -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
